@@ -3,10 +3,11 @@ Hash: SHA256
 
 DIST raspberrypi-image-3.1.9_p20120722.tar.xz 12564388 SHA256 8fbca0498220c01f63e0f4ec8e07d2fc667bc14d370773a45fe8563dd04595d3 SHA512 63a780153b157efdb0b2cbf2cc7afae6abd9a1925ebfc83dc0931f6356770d766cf8b8dc2b061e630660ce270ab1cbedc66553834d1ed5b52d7262f7a8b20367 WHIRLPOOL fa224d293eb8f829ac0b5732efa360a7db3314fe05740dfd8d4fb5dc639397f63caac83459a45af4edbaf7e7c3c5fa4a93906a5e4bfb0227d28d5c0f782921d0
 DIST raspberrypi-image-3.2.27_p20121105.tar.xz 25805544 SHA256 11cffda10c4121b81fda70338e092ef60241c0ad6dd2b2a9665e75441e7417ff SHA512 e5e971d61255f62ccec076c2bb0f8648cc7b47c30723209c938fbb1f225fdc0ae2d8c3e67c01ded1e2462e2266829b3e2decb368226bd86e21faf91d3e13c099 WHIRLPOOL b5d99c57bfd8f39de6307b5259b5caf66a81ac78dc0859c982a091065ae1f1a037f3c786ee204251a2b70d29eb72137ec65a70e508952159e823c78da8672c8e
+DIST raspberrypi-image-3.6.11_p20130711.tar.xz 20249596 SHA256 c5eec47388fa0039045a50191f7118057e48d2e8657ec1006f4caca8e30d7534 SHA512 10d841db5fe919f0794f3959632f907591bfc93d180afeaac0f690caab2960cf8ddf1d4d1ec76c5d50d683b20126ea1d5f598d9ffc1d743093311765266fc23f WHIRLPOOL 6c24dadcf316b0ad9ed8416cb1cc8c488a32636fb95f1f6cc7b318d3416ae03f726182fffd7b5eddb9d5bf810aa10edd1eeccd25613ffec3df3bec2cb1207dd9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlCa0esACgkQknrdDGLu8JD/IAD/YEJzVqsGcKIWWnMUlSjA2HMT
-Q+GMxyBO20GgXO9+pzkA/jNsYnM//z5GKaR7tHbxQbEEMQnOsaUF4ux37Jm/rxNg
-=teKG
+iF4EAREIAAYFAlHjSK0ACgkQknrdDGLu8JCcnAD5AZv+N2zoqYcB7D9QGiRWEBHa
+tY1oxki9sNfscvGwBuoBAIIt2UvB1my9G/b3/5KR2zEY/eeMV5O+SrVAq57TyIAg
+=NZjE
 -----END PGP SIGNATURE-----
