@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*raspberrypi-image-3.6.11_p20130711 (15 Jul 2013)
+
+  15 Jul 2013; Michael Weber <xmw@gentoo.org>
+  +raspberrypi-image-3.6.11_p20130711.ebuild:
+  Version bump
+
 *raspberrypi-image-3.2.27_p20121105-r1 (12 Jul 2013)
 
   12 Jul 2013; Michael Weber <xmw@gentoo.org>
